# PL

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: conftest.py  database.py  main.py  pyproject.toml  test_auth_endpoints.py  test_models_documents.py  test_security.py
backend/app/: ai.py  auth.py  config.py  db.py  documents.py  login_page.py  main.py  test_auth.py  test_documents.py  test_documents_endpoints.py
backend/core/: dependencies.py  security.py
backend/models/: auth.py  chat.py  documents.py
backend/routes/: auth.py  chat.py  documents.py
backend/services/: ai_service.py  auth_service.py  document_service.py
frontend/: README.md  TESTING.md  jest.config.ts  package-lock.json  package.json  vitest.config.mts
frontend/app/: _docRender.tsx  globals.css  layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/app/mutual-nda/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Chat.tsx  DownloadPdfButton.tsx  Footer.tsx  Header.tsx  MyDocumentsList.tsx  MyDocumentsPage.tsx  NdaForm.tsx  NdaPreview.tsx  NdaWorkspace.tsx  UnsupportedDocWorkspace.tsx  Workspace.tsx
frontend/lib/: api.test.ts  api.ts  date.test.ts  date.ts  defaultValues.test.ts  defaultValues.ts  fillTemplate.test.ts  fillTemplate.ts  terms.test.ts  terms.ts  types.ts
frontend/lib/__test__/: makeData.ts
frontend/pdf/: NdaPdfDocument.test.ts  NdaPdfDocument.tsx  pdfStyles.ts
frontend/templates/: README.md
scripts/: start-linux.sh  start-windows.ps1
templates/: LICENSE.md
(+39 files in other folders)
