[project]
name = "pl-backend"
version = "0.1.0"
description = "FastAPI backend for the Prelegal document-drafting app."
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0,<5",
    "fastapi[standard]>=0.138.2",
    # itsdangerous is still used by the legacy app/ package; will be
    # removed in PL-9 Step 3 once JWT replaces it.
    "itsdangerous>=2.2.0",
    "litellm>=1.55.0",
    "pydantic[email]>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false