[project]
name = "pl-backend"
version = "0.1.0"
description = "FastAPI backend for the Prelegal document-drafting app."
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.0,<5",
    "fastapi[standard]>=0.138.2",
    "litellm>=1.55.0",
    "pydantic[email]>=2.9.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.uv]
package = false